1、切换会话已经做的很丝滑了，但是现在业务代码和ui代码耦合的比较多，后续考虑优化下。 2、官方预置prompt优化了一下